# projectzero_phase1test2

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODEX_AUTONOMOUS_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_INTERIM.md  LEARNING_ACTION_PLAN.md  README 2.md  README.md  SUPABASE_SCHEMA.md  render.yaml
archive/: IMPLEMENTATION_PLAN_INTERIM_v1.md  IMPLEMENTATION_PLAN_INTERIM_v2.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/adapters/: __init__.py  chroma_vector_search.py  networkx_graph_search.py  openai_llm.py  simple_vector_search.py  supabase_repository.py
backend/app/api/v1/: analyses.py  health.py
backend/app/domain/: __init__.py  analysis_service.py  prompts.py
backend/app/infra/: di.py  settings.py
backend/app/ports/: graph_search.py  llm.py  repository.py  vector_search.py
backend/tests/: test_analysis_api.py  test_analysis_service.py  test_graph_search.py  test_simple_vector_search.py
data/: external.json  internal.json
data/graph/: edges.json  nodes.json
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts
infra/: docker-compose.yml
mvp_streamlit/: .gitignore  CLAUDE.md  README.md  SKILLS.md  app.py  config.py  requirements.txt
mvp_streamlit/data/: persons.json
mvp_streamlit/docs/: architecture_description.md  architecture_flow.md  backend_description.md  backend_slide.pptx  flow_slide.pptx  generate_backend_slide.py  generate_flow_slide.py  graph_structure.md  (+1 more)
scripts/: seed_supabase.py
(+4 files in other folders)
